# fl-rl-compression-MPI

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION-PLAN.md  README.md  on_cluster.sh
src/: args_parser.cu  args_parser.cuh  file_io.cu  file_io.cuh  main.cu  utils.cuh
src/fl/: fl_common.cuh  fl_cpu.cu  fl_cpu.cuh  fl_gpu.cu  fl_gpu.cuh  fl_gpu_mpi.cu  fl_gpu_mpi.cuh  mpi_common.cuh
src/rl/: rl_common.cuh  rl_cpu.cu  rl_cpu.cuh  rl_gpu.cu  rl_gpu.cuh
src/timers/: cpu_timer.cu  cpu_timer.cuh  cpu_timer_with_transfer.cu  cpu_timer_with_transfer.cuh  timer.cuh
tests/: common.cuh
tests/fl/: test_fl_cpu.cu  test_fl_gpu.cu
tests/rl/: test_rl_cpu.cu  test_rl_gpu.cu
trzcinski_kacper_flrl_compression/: CMakeLists.txt
trzcinski_kacper_flrl_compression/example_input/: lorem_ipsum.txt  same_letter.txt
trzcinski_kacper_flrl_compression/src/: args_parser.cuh  file_io.cu  file_io.cuh  main.cu  utils.cuh
trzcinski_kacper_flrl_compression/src/fl/: fl_cpu.cu  fl_cpu.cuh  fl_gpu.cu
trzcinski_kacper_flrl_compression/src/timers/: cpu_timer.cuh  gpu_timer.cu  gpu_timer.cuh
